// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Type Linking > Properly generates documentation for types that are linked > # Of Files Generated 1`] = `34`;

exports[`Type Linking > Properly generates documentation for types that are linked > msdocs/priorscriptapi/TOC.yml 1`] = `
"  - name: minecraft/example-module-3 1.x.x
    items:
    - name: minecraft/example-module-3 1.x.x
      href: minecraft/example-module-3-1xx/minecraft-example-module-3.md
    - name: ExampleClassInModule3V1AndV2
      href: minecraft/example-module-3-1xx/ExampleClassInModule3V1AndV2.md
"
`;

exports[`Type Linking > Properly generates documentation for types that are linked > msdocs/priorscriptapi/minecraft/example-module-3-1xx/ExampleClassInModule3V1AndV2.md 1`] = `
"---
# DO NOT TOUCH — This file was automatically generated by @minecraft/api-docs-generator, to report problems file an issue at https://github.com/Mojang/minecraft-scripting-libraries
author: jakeshirley
ms.author: jashir
ms.service: minecraft-bedrock-edition
ms.date: 02/10/2025
title: minecraft/example-module-3-1xx.ExampleClassInModule3V1AndV2 Class
description: Contents of the @minecraft/example-module-3.ExampleClassInModule3V1AndV2 class (Version 1.x.x).
---
# ExampleClassInModule3V1AndV2 Class (Version 1.x.x)

> [!IMPORTANT]
> This documentation is for an older version of this module. Go to the latest documentation [*here*](../../../scriptapi/minecraft/example-module-3/ExampleClassInModule3V1AndV2.md).
"
`;

exports[`Type Linking > Properly generates documentation for types that are linked > msdocs/priorscriptapi/minecraft/example-module-3-1xx/minecraft-example-module-3.md 1`] = `
"---
# DO NOT TOUCH — This file was automatically generated by @minecraft/api-docs-generator, to report problems file an issue at https://github.com/Mojang/minecraft-scripting-libraries
author: jakeshirley
ms.author: jashir
ms.service: minecraft-bedrock-edition
ms.date: 02/10/2025
title: minecraft/example-module-3-1xx Module
description: Contents of the @minecraft/example-module-3 module (Version 1.x.x)
---
# \`@minecraft/example-module-3\` Module (Version 1.x.x)

> [!IMPORTANT]
> This documentation is for an older version of this module. Go to the latest documentation [*here*](../../../scriptapi/minecraft/example-module-3/minecraft-example-module-3.md).

## Manifest Details
\`\`\`json
{
    "module_name": "@minecraft/example-module-3",
    "version": "1.0.0"
}
\`\`\`

## Available Versions
- \`1.0.0\`

## Classes
- [ExampleClassInModule3V1AndV2](ExampleClassInModule3V1AndV2.md)
"
`;

exports[`Type Linking > Properly generates documentation for types that are linked > msdocs/scriptapi/TOC.yml 1`] = `
"  - name: minecraft/example-module
    items:
    - name: minecraft/example-module
      href: minecraft/example-module/minecraft-example-module.md
    - name: minecraft/example-module Changelog
      href: minecraft/example-module/changelog.md
    - name: ExampleEnum
      href: minecraft/example-module/ExampleEnum.md
    - name: BaseClassWithPrivateConstructor
      href: minecraft/example-module/BaseClassWithPrivateConstructor.md
    - name: ChildClassOfPrivateConstructor
      href: minecraft/example-module/ChildClassOfPrivateConstructor.md
    - name: ChildClassOfPrivateConstructor2
      href: minecraft/example-module/ChildClassOfPrivateConstructor2.md
    - name: ExampleClass
      href: minecraft/example-module/ExampleClass.md
    - name: ExampleClassWithCrossModuleInheritence
      href: minecraft/example-module/ExampleClassWithCrossModuleInheritence.md
    - name: ExampleInterface
      href: minecraft/example-module/ExampleInterface.md
  - name: minecraft/example-module-2
    items:
    - name: minecraft/example-module-2
      href: minecraft/example-module-2/minecraft-example-module-2.md
    - name: minecraft/example-module-2 Changelog
      href: minecraft/example-module-2/changelog.md
    - name: ExampleClassFromDifferentModule
      href: minecraft/example-module-2/ExampleClassFromDifferentModule.md
  - name: minecraft/example-module-3
    items:
    - name: minecraft/example-module-3
      href: minecraft/example-module-3/minecraft-example-module-3.md
    - name: minecraft/example-module-3 Changelog
      href: minecraft/example-module-3/changelog.md
    - name: ExampleClassInModule3V1AndV2
      href: minecraft/example-module-3/ExampleClassInModule3V1AndV2.md
  - name: minecraft/example-module-4
    items:
    - name: minecraft/example-module-4
      href: minecraft/example-module-4/minecraft-example-module-4.md
    - name: minecraft/example-module-4 Changelog
      href: minecraft/example-module-4/changelog.md
    - name: ExampleEnum
      href: minecraft/example-module-4/ExampleEnum.md
    - name: BaseClassWithPrivateConstructor
      href: minecraft/example-module-4/BaseClassWithPrivateConstructor.md
    - name: ChildClassOfPrivateConstructor
      href: minecraft/example-module-4/ChildClassOfPrivateConstructor.md
    - name: ChildClassOfPrivateConstructor2
      href: minecraft/example-module-4/ChildClassOfPrivateConstructor2.md
    - name: ExampleClass
      href: minecraft/example-module-4/ExampleClass.md
    - name: ExampleClassWithCrossModuleInheritence
      href: minecraft/example-module-4/ExampleClassWithCrossModuleInheritence.md
    - name: ExampleInterface
      href: minecraft/example-module-4/ExampleInterface.md
"
`;

exports[`Type Linking > Properly generates documentation for types that are linked > msdocs/scriptapi/minecraft/example-module/BaseClassWithPrivateConstructor.md 1`] = `
"---
# DO NOT TOUCH — This file was automatically generated by @minecraft/api-docs-generator, to report problems file an issue at https://github.com/Mojang/minecraft-scripting-libraries
author: jakeshirley
ms.author: jashir
ms.service: minecraft-bedrock-edition
ms.date: 02/10/2025
title: minecraft/example-module.BaseClassWithPrivateConstructor Class
description: Contents of the @minecraft/example-module.BaseClassWithPrivateConstructor class.
---
# BaseClassWithPrivateConstructor Class

## Classes that extend BaseClassWithPrivateConstructor
- [*ChildClassOfPrivateConstructor*](ChildClassOfPrivateConstructor.md)
- [*ChildClassOfPrivateConstructor2*](ChildClassOfPrivateConstructor2.md)
"
`;

exports[`Type Linking > Properly generates documentation for types that are linked > msdocs/scriptapi/minecraft/example-module/ChildClassOfPrivateConstructor.md 1`] = `
"---
# DO NOT TOUCH — This file was automatically generated by @minecraft/api-docs-generator, to report problems file an issue at https://github.com/Mojang/minecraft-scripting-libraries
author: jakeshirley
ms.author: jashir
ms.service: minecraft-bedrock-edition
ms.date: 02/10/2025
title: minecraft/example-module.ChildClassOfPrivateConstructor Class
description: Contents of the @minecraft/example-module.ChildClassOfPrivateConstructor class.
---
# ChildClassOfPrivateConstructor Class

## Extends
- [*BaseClassWithPrivateConstructor*](BaseClassWithPrivateConstructor.md)
"
`;

exports[`Type Linking > Properly generates documentation for types that are linked > msdocs/scriptapi/minecraft/example-module/ChildClassOfPrivateConstructor2.md 1`] = `
"---
# DO NOT TOUCH — This file was automatically generated by @minecraft/api-docs-generator, to report problems file an issue at https://github.com/Mojang/minecraft-scripting-libraries
author: jakeshirley
ms.author: jashir
ms.service: minecraft-bedrock-edition
ms.date: 02/10/2025
title: minecraft/example-module.ChildClassOfPrivateConstructor2 Class
description: Contents of the @minecraft/example-module.ChildClassOfPrivateConstructor2 class.
---
# ChildClassOfPrivateConstructor2 Class

## Extends
- [*BaseClassWithPrivateConstructor*](BaseClassWithPrivateConstructor.md)
"
`;

exports[`Type Linking > Properly generates documentation for types that are linked > msdocs/scriptapi/minecraft/example-module/ExampleClass.md 1`] = `
"---
# DO NOT TOUCH — This file was automatically generated by @minecraft/api-docs-generator, to report problems file an issue at https://github.com/Mojang/minecraft-scripting-libraries
author: jakeshirley
ms.author: jashir
ms.service: minecraft-bedrock-edition
ms.date: 02/10/2025
title: minecraft/example-module.ExampleClass Class
description: Contents of the @minecraft/example-module.ExampleClass class.
---
# ExampleClass Class

## Properties

### **ExampleProperty**
\`ExampleProperty: number;\`

Type: *number*

Notes:
  - This property can't be used in read-only mode.

## Methods
- [ExampleMethod](#examplemethod)

### **ExampleMethod**
\`
ExampleMethod(testArg: string): boolean
\`

#### **Parameters**
- **testArg**: *string*

**Returns** *boolean*
  
Notes:
- This function can't be called in read-only mode.
"
`;

exports[`Type Linking > Properly generates documentation for types that are linked > msdocs/scriptapi/minecraft/example-module/ExampleClassWithCrossModuleInheritence.md 1`] = `
"---
# DO NOT TOUCH — This file was automatically generated by @minecraft/api-docs-generator, to report problems file an issue at https://github.com/Mojang/minecraft-scripting-libraries
author: jakeshirley
ms.author: jashir
ms.service: minecraft-bedrock-edition
ms.date: 02/10/2025
title: minecraft/example-module.ExampleClassWithCrossModuleInheritence Class
description: Contents of the @minecraft/example-module.ExampleClassWithCrossModuleInheritence class.
---
# ExampleClassWithCrossModuleInheritence Class

## Classes that extend ExampleClassWithCrossModuleInheritence
- [*@minecraft/example-module-2.ExampleClassFromDifferentModule*](../../../scriptapi/minecraft/example-module-2/ExampleClassFromDifferentModule.md)
"
`;

exports[`Type Linking > Properly generates documentation for types that are linked > msdocs/scriptapi/minecraft/example-module/ExampleEnum.md 1`] = `
"---
# DO NOT TOUCH — This file was automatically generated by @minecraft/api-docs-generator, to report problems file an issue at https://github.com/Mojang/minecraft-scripting-libraries
author: jakeshirley
ms.author: jashir
ms.service: minecraft-bedrock-edition
ms.date: 02/10/2025
title: minecraft/example-module.ExampleEnum Enumeration
description: Contents of the @minecraft/example-module.ExampleEnum enumeration.
---
# ExampleEnum Enumeration

## Constants
### **ExampleValue**
\`ExampleValue = "foo"\`
"
`;

exports[`Type Linking > Properly generates documentation for types that are linked > msdocs/scriptapi/minecraft/example-module/ExampleInterface.md 1`] = `
"---
# DO NOT TOUCH — This file was automatically generated by @minecraft/api-docs-generator, to report problems file an issue at https://github.com/Mojang/minecraft-scripting-libraries
author: jakeshirley
ms.author: jashir
ms.service: minecraft-bedrock-edition
ms.date: 02/10/2025
title: minecraft/example-module.ExampleInterface Interface
description: Contents of the @minecraft/example-module.ExampleInterface class.
---
# ExampleInterface Interface

## Properties

### **ExampleProperty**
\`ExampleProperty: number;\`

Type: *number*
"
`;

exports[`Type Linking > Properly generates documentation for types that are linked > msdocs/scriptapi/minecraft/example-module/changelog.md 1`] = `
"---
# DO NOT TOUCH — This file was automatically generated by @minecraft/api-docs-generator, to report problems file an issue at https://github.com/Mojang/minecraft-scripting-libraries
author: jakeshirley
ms.author: jashir
ms.service: minecraft-bedrock-edition
ms.date: 02/10/2025
title: minecraft/example-module Changelog
description: Changelog of the \`@minecraft/example-module\` module
---
# \`@minecraft/example-module\` Changelog

## Version Changes
- [1.1.0](#110)
- [1.0.0](#100)

## 1.1.0
## 1.0.0
#### Added \`@minecraft/example-module\` Module
"
`;

exports[`Type Linking > Properly generates documentation for types that are linked > msdocs/scriptapi/minecraft/example-module/minecraft-example-module.md 1`] = `
"---
# DO NOT TOUCH — This file was automatically generated by @minecraft/api-docs-generator, to report problems file an issue at https://github.com/Mojang/minecraft-scripting-libraries
author: jakeshirley
ms.author: jashir
ms.service: minecraft-bedrock-edition
ms.date: 02/10/2025
title: minecraft/example-module Module
description: Contents of the @minecraft/example-module module
---
# \`@minecraft/example-module\` Module

This is a description with a ton of links:

Example module: [*@minecraft/example-module*](../../../scriptapi/minecraft/example-module/minecraft-example-module.md)

Example module function: [*@minecraft/example-module.ExampleFunction*](../../../scriptapi/minecraft/example-module/minecraft-example-module.md#examplefunction)

Example module constant: [*@minecraft/example-module.ExampleConstant*](../../../scriptapi/minecraft/example-module/minecraft-example-module.md#exampleconstant)

Example module object: [*@minecraft/example-module.ExampleObject*](../../../scriptapi/minecraft/example-module/minecraft-example-module.md#exampleobject)

Example class: [*@minecraft/example-module.ExampleClass*](../../../scriptapi/minecraft/example-module/ExampleClass.md)

Example class property: [*@minecraft/example-module.ExampleClass.ExampleProperty*](../../../scriptapi/minecraft/example-module/ExampleClass.md#exampleproperty)

Example class method: [*@minecraft/example-module.ExampleClass.ExampleMethod*](../../../scriptapi/minecraft/example-module/ExampleClass.md#examplemethod)

Example interface: [*@minecraft/example-module.ExampleInterface*](../../../scriptapi/minecraft/example-module/ExampleInterface.md)

Example interface property: [*@minecraft/example-module.ExampleInterface.ExampleProperty*](../../../scriptapi/minecraft/example-module/ExampleInterface.md#exampleproperty)

Example enum: [*@minecraft/example-module.ExampleEnum*](../../../scriptapi/minecraft/example-module/ExampleEnum.md)

Example enum value: [*@minecraft/example-module.ExampleEnum.ExampleValue*](../../../scriptapi/minecraft/example-module/ExampleEnum.md#examplevalue)

This line has multiple links! [*@minecraft/example-module*](../../../scriptapi/minecraft/example-module/minecraft-example-module.md) [*@minecraft/example-module.ExampleFunction*](../../../scriptapi/minecraft/example-module/minecraft-example-module.md#examplefunction) [*@minecraft/example-module.ExampleConstant*](../../../scriptapi/minecraft/example-module/minecraft-example-module.md#exampleconstant) [*@minecraft/example-module.ExampleObject*](../../../scriptapi/minecraft/example-module/minecraft-example-module.md#exampleobject)

## [Changelog](changelog.md)

## Manifest Details
\`\`\`json
{
    "module_name": "@minecraft/example-module",
    "version": "1.1.0"
}
\`\`\`
This is version 1.x.x of this module, which is the latest as of version 1.0.0 of Minecraft.

## Available Versions
- \`1.1.0\`
- \`1.0.0\`

## Enumerations
- [ExampleEnum](ExampleEnum.md)

## Classes
- [BaseClassWithPrivateConstructor](BaseClassWithPrivateConstructor.md)
- [ChildClassOfPrivateConstructor](ChildClassOfPrivateConstructor.md)
- [ChildClassOfPrivateConstructor2](ChildClassOfPrivateConstructor2.md)
- [ExampleClass](ExampleClass.md)
- [ExampleClassWithCrossModuleInheritence](ExampleClassWithCrossModuleInheritence.md)

## Interfaces
- [ExampleInterface](ExampleInterface.md)

## Functions

### **ExampleFunction**
\`
ExampleFunction(testArg: string): boolean
\`

#### **Parameters**
- **testArg**: *string*

**Returns** *boolean*
  
Notes:
- This function can't be called in read-only mode.

## Constants

### **ExampleConstant**
\`static read-only ExampleConstant = 25;\`

Type: *number*

## Objects
  
### **ExampleObject**
\`static read-only ExampleObject: ExampleClass;\`

Type: [*ExampleClass*](ExampleClass.md)
  
### **ExampleObjectInModule3**
\`static read-only ExampleObjectInModule3: minecraftexamplemodule3.ExampleClassInModule3V1AndV2;\`

Type: [*@minecraft/example-module-3.ExampleClassInModule3V1AndV2*](../../../priorscriptapi/minecraft/example-module-3-1xx/ExampleClassInModule3V1AndV2.md)

## Dependencies
- [\`@minecraft/example-module-3\`](../../../priorscriptapi/minecraft/example-module-3-1xx/minecraft-example-module-3.md)
"
`;

exports[`Type Linking > Properly generates documentation for types that are linked > msdocs/scriptapi/minecraft/example-module-2/ExampleClassFromDifferentModule.md 1`] = `
"---
# DO NOT TOUCH — This file was automatically generated by @minecraft/api-docs-generator, to report problems file an issue at https://github.com/Mojang/minecraft-scripting-libraries
author: jakeshirley
ms.author: jashir
ms.service: minecraft-bedrock-edition
ms.date: 02/10/2025
title: minecraft/example-module-2.ExampleClassFromDifferentModule Class
description: Contents of the @minecraft/example-module-2.ExampleClassFromDifferentModule class.
---
# ExampleClassFromDifferentModule Class

## Extends
- [*@minecraft/example-module.ExampleClassWithCrossModuleInheritence*](../../../scriptapi/minecraft/example-module/ExampleClassWithCrossModuleInheritence.md)
"
`;

exports[`Type Linking > Properly generates documentation for types that are linked > msdocs/scriptapi/minecraft/example-module-2/changelog.md 1`] = `
"---
# DO NOT TOUCH — This file was automatically generated by @minecraft/api-docs-generator, to report problems file an issue at https://github.com/Mojang/minecraft-scripting-libraries
author: jakeshirley
ms.author: jashir
ms.service: minecraft-bedrock-edition
ms.date: 02/10/2025
title: minecraft/example-module-2 Changelog
description: Changelog of the \`@minecraft/example-module-2\` module
---
# \`@minecraft/example-module-2\` Changelog

## Version Changes
- [1.0.0](#100)

## 1.0.0
#### Added \`@minecraft/example-module-2\` Module
"
`;

exports[`Type Linking > Properly generates documentation for types that are linked > msdocs/scriptapi/minecraft/example-module-2/minecraft-example-module-2.md 1`] = `
"---
# DO NOT TOUCH — This file was automatically generated by @minecraft/api-docs-generator, to report problems file an issue at https://github.com/Mojang/minecraft-scripting-libraries
author: jakeshirley
ms.author: jashir
ms.service: minecraft-bedrock-edition
ms.date: 02/10/2025
title: minecraft/example-module-2 Module
description: Contents of the @minecraft/example-module-2 module
---
# \`@minecraft/example-module-2\` Module

This is a description with a ton of links from a dependency module:

Example module: [*@minecraft/example-module*](../../../scriptapi/minecraft/example-module/minecraft-example-module.md)

Example module function: [*@minecraft/example-module.ExampleFunction*](../../../scriptapi/minecraft/example-module/minecraft-example-module.md#examplefunction)

Example module constant: [*@minecraft/example-module.ExampleConstant*](../../../scriptapi/minecraft/example-module/minecraft-example-module.md#exampleconstant)

Example module object: [*@minecraft/example-module.ExampleObject*](../../../scriptapi/minecraft/example-module/minecraft-example-module.md#exampleobject)

Example class: [*@minecraft/example-module.ExampleClass*](../../../scriptapi/minecraft/example-module/ExampleClass.md)

Example class property: [*@minecraft/example-module.ExampleClass.ExampleProperty*](../../../scriptapi/minecraft/example-module/ExampleClass.md#exampleproperty)

Example class method: [*@minecraft/example-module.ExampleClass.ExampleMethod*](../../../scriptapi/minecraft/example-module/ExampleClass.md#examplemethod)

Example interface: [*@minecraft/example-module.ExampleInterface*](../../../scriptapi/minecraft/example-module/ExampleInterface.md)

Example interface property: [*@minecraft/example-module.ExampleInterface.ExampleProperty*](../../../scriptapi/minecraft/example-module/ExampleInterface.md#exampleproperty)

Example enum: [*@minecraft/example-module.ExampleEnum*](../../../scriptapi/minecraft/example-module/ExampleEnum.md)

Example enum value: [*@minecraft/example-module.ExampleEnum.ExampleValue*](../../../scriptapi/minecraft/example-module/ExampleEnum.md#examplevalue)

## [Changelog](changelog.md)

## Manifest Details
\`\`\`json
{
    "module_name": "@minecraft/example-module-2",
    "version": "1.0.0"
}
\`\`\`
This is version 1.x.x of this module, which is the latest as of version 1.0.0 of Minecraft.

## Available Versions
- \`1.0.0\`

## Classes
- [ExampleClassFromDifferentModule](ExampleClassFromDifferentModule.md)

## Dependencies
- [\`@minecraft/example-module\`](../../../scriptapi/minecraft/example-module/minecraft-example-module.md)
"
`;

exports[`Type Linking > Properly generates documentation for types that are linked > msdocs/scriptapi/minecraft/example-module-3/ExampleClassInModule3V1AndV2.md 1`] = `
"---
# DO NOT TOUCH — This file was automatically generated by @minecraft/api-docs-generator, to report problems file an issue at https://github.com/Mojang/minecraft-scripting-libraries
author: jakeshirley
ms.author: jashir
ms.service: minecraft-bedrock-edition
ms.date: 02/10/2025
title: minecraft/example-module-3.ExampleClassInModule3V1AndV2 Class
description: Contents of the @minecraft/example-module-3.ExampleClassInModule3V1AndV2 class.
---
# ExampleClassInModule3V1AndV2 Class
"
`;

exports[`Type Linking > Properly generates documentation for types that are linked > msdocs/scriptapi/minecraft/example-module-3/changelog.md 1`] = `
"---
# DO NOT TOUCH — This file was automatically generated by @minecraft/api-docs-generator, to report problems file an issue at https://github.com/Mojang/minecraft-scripting-libraries
author: jakeshirley
ms.author: jashir
ms.service: minecraft-bedrock-edition
ms.date: 02/10/2025
title: minecraft/example-module-3 Changelog
description: Changelog of the \`@minecraft/example-module-3\` module
---
# \`@minecraft/example-module-3\` Changelog

## Version Changes
- [2.0.0](#200)
- [1.0.0](#100)

## 2.0.0
## 1.0.0
#### Added \`@minecraft/example-module-3\` Module
"
`;

exports[`Type Linking > Properly generates documentation for types that are linked > msdocs/scriptapi/minecraft/example-module-3/minecraft-example-module-3.md 1`] = `
"---
# DO NOT TOUCH — This file was automatically generated by @minecraft/api-docs-generator, to report problems file an issue at https://github.com/Mojang/minecraft-scripting-libraries
author: jakeshirley
ms.author: jashir
ms.service: minecraft-bedrock-edition
ms.date: 02/10/2025
title: minecraft/example-module-3 Module
description: Contents of the @minecraft/example-module-3 module
---
# \`@minecraft/example-module-3\` Module

## [Changelog](changelog.md)

## Manifest Details
\`\`\`json
{
    "module_name": "@minecraft/example-module-3",
    "version": "2.0.0"
}
\`\`\`
This is version 2.x.x of this module, which is the latest as of version 1.0.0 of Minecraft.

## Available Versions
- \`2.0.0\`

### Prior Versions

The following API versions are from a major version that is documented here: [*@minecraft/example-module-3*](../../../priorscriptapi/minecraft/example-module-3-1xx/minecraft-example-module-3.md):
- \`1.0.0\`


## Classes
- [ExampleClassInModule3V1AndV2](ExampleClassInModule3V1AndV2.md)
"
`;

exports[`Type Linking > Properly generates documentation for types that are linked > msdocs/scriptapi/minecraft/example-module-4/BaseClassWithPrivateConstructor.md 1`] = `
"---
# DO NOT TOUCH — This file was automatically generated by @minecraft/api-docs-generator, to report problems file an issue at https://github.com/Mojang/minecraft-scripting-libraries
author: jakeshirley
ms.author: jashir
ms.service: minecraft-bedrock-edition
ms.date: 02/10/2025
title: minecraft/example-module-4.BaseClassWithPrivateConstructor Class
description: Contents of the @minecraft/example-module-4.BaseClassWithPrivateConstructor class.
---
# BaseClassWithPrivateConstructor Class

## Classes that extend BaseClassWithPrivateConstructor
- [*ChildClassOfPrivateConstructor*](ChildClassOfPrivateConstructor.md)
- [*ChildClassOfPrivateConstructor2*](ChildClassOfPrivateConstructor2.md)
"
`;

exports[`Type Linking > Properly generates documentation for types that are linked > msdocs/scriptapi/minecraft/example-module-4/ChildClassOfPrivateConstructor.md 1`] = `
"---
# DO NOT TOUCH — This file was automatically generated by @minecraft/api-docs-generator, to report problems file an issue at https://github.com/Mojang/minecraft-scripting-libraries
author: jakeshirley
ms.author: jashir
ms.service: minecraft-bedrock-edition
ms.date: 02/10/2025
title: minecraft/example-module-4.ChildClassOfPrivateConstructor Class
description: Contents of the @minecraft/example-module-4.ChildClassOfPrivateConstructor class.
---
# ChildClassOfPrivateConstructor Class

## Extends
- [*BaseClassWithPrivateConstructor*](BaseClassWithPrivateConstructor.md)
"
`;

exports[`Type Linking > Properly generates documentation for types that are linked > msdocs/scriptapi/minecraft/example-module-4/ChildClassOfPrivateConstructor2.md 1`] = `
"---
# DO NOT TOUCH — This file was automatically generated by @minecraft/api-docs-generator, to report problems file an issue at https://github.com/Mojang/minecraft-scripting-libraries
author: jakeshirley
ms.author: jashir
ms.service: minecraft-bedrock-edition
ms.date: 02/10/2025
title: minecraft/example-module-4.ChildClassOfPrivateConstructor2 Class
description: Contents of the @minecraft/example-module-4.ChildClassOfPrivateConstructor2 class.
---
# ChildClassOfPrivateConstructor2 Class

## Extends
- [*BaseClassWithPrivateConstructor*](BaseClassWithPrivateConstructor.md)
"
`;

exports[`Type Linking > Properly generates documentation for types that are linked > msdocs/scriptapi/minecraft/example-module-4/ExampleClass.md 1`] = `
"---
# DO NOT TOUCH — This file was automatically generated by @minecraft/api-docs-generator, to report problems file an issue at https://github.com/Mojang/minecraft-scripting-libraries
author: jakeshirley
ms.author: jashir
ms.service: minecraft-bedrock-edition
ms.date: 02/10/2025
title: minecraft/example-module-4.ExampleClass Class
description: Contents of the @minecraft/example-module-4.ExampleClass class.
---
# ExampleClass Class

## Properties

### **ExampleProperty**
\`ExampleProperty: number;\`

Type: *number*

Notes:
  - This property can't be used in read-only mode.

## Methods
- [ExampleMethod](#examplemethod)

### **ExampleMethod**
\`
ExampleMethod(testArg: string): boolean
\`

#### **Parameters**
- **testArg**: *string*

**Returns** *boolean*
  
Notes:
- This function can't be called in read-only mode.
"
`;

exports[`Type Linking > Properly generates documentation for types that are linked > msdocs/scriptapi/minecraft/example-module-4/ExampleClassWithCrossModuleInheritence.md 1`] = `
"---
# DO NOT TOUCH — This file was automatically generated by @minecraft/api-docs-generator, to report problems file an issue at https://github.com/Mojang/minecraft-scripting-libraries
author: jakeshirley
ms.author: jashir
ms.service: minecraft-bedrock-edition
ms.date: 02/10/2025
title: minecraft/example-module-4.ExampleClassWithCrossModuleInheritence Class
description: Contents of the @minecraft/example-module-4.ExampleClassWithCrossModuleInheritence class.
---
# ExampleClassWithCrossModuleInheritence Class
"
`;

exports[`Type Linking > Properly generates documentation for types that are linked > msdocs/scriptapi/minecraft/example-module-4/ExampleEnum.md 1`] = `
"---
# DO NOT TOUCH — This file was automatically generated by @minecraft/api-docs-generator, to report problems file an issue at https://github.com/Mojang/minecraft-scripting-libraries
author: jakeshirley
ms.author: jashir
ms.service: minecraft-bedrock-edition
ms.date: 02/10/2025
title: minecraft/example-module-4.ExampleEnum Enumeration
description: Contents of the @minecraft/example-module-4.ExampleEnum enumeration.
---
# ExampleEnum Enumeration

## Constants
### **ExampleValue**
\`ExampleValue = "foo"\`
"
`;

exports[`Type Linking > Properly generates documentation for types that are linked > msdocs/scriptapi/minecraft/example-module-4/ExampleInterface.md 1`] = `
"---
# DO NOT TOUCH — This file was automatically generated by @minecraft/api-docs-generator, to report problems file an issue at https://github.com/Mojang/minecraft-scripting-libraries
author: jakeshirley
ms.author: jashir
ms.service: minecraft-bedrock-edition
ms.date: 02/10/2025
title: minecraft/example-module-4.ExampleInterface Interface
description: Contents of the @minecraft/example-module-4.ExampleInterface class.
---
# ExampleInterface Interface

## Properties

### **ExampleProperty**
\`ExampleProperty: number;\`

Type: *number*
"
`;

exports[`Type Linking > Properly generates documentation for types that are linked > msdocs/scriptapi/minecraft/example-module-4/changelog.md 1`] = `
"---
# DO NOT TOUCH — This file was automatically generated by @minecraft/api-docs-generator, to report problems file an issue at https://github.com/Mojang/minecraft-scripting-libraries
author: jakeshirley
ms.author: jashir
ms.service: minecraft-bedrock-edition
ms.date: 02/10/2025
title: minecraft/example-module-4 Changelog
description: Changelog of the \`@minecraft/example-module-4\` module
---
# \`@minecraft/example-module-4\` Changelog

## Version Changes
- [1.0.0](#100)

## 1.0.0
#### Added \`@minecraft/example-module-4\` Module
"
`;

exports[`Type Linking > Properly generates documentation for types that are linked > msdocs/scriptapi/minecraft/example-module-4/minecraft-example-module-4.md 1`] = `
"---
# DO NOT TOUCH — This file was automatically generated by @minecraft/api-docs-generator, to report problems file an issue at https://github.com/Mojang/minecraft-scripting-libraries
author: jakeshirley
ms.author: jashir
ms.service: minecraft-bedrock-edition
ms.date: 02/10/2025
title: minecraft/example-module-4 Module
description: Contents of the @minecraft/example-module-4 module
---
# \`@minecraft/example-module-4\` Module

## [Changelog](changelog.md)

## Manifest Details
\`\`\`json
{
    "module_name": "@minecraft/example-module-4",
    "version": "1.0.0"
}
\`\`\`
This is version 1.x.x of this module, which is the latest as of version 1.0.0 of Minecraft.

## Available Versions
- \`1.0.0\`

## Enumerations
- [ExampleEnum](ExampleEnum.md)

## Classes
- [BaseClassWithPrivateConstructor](BaseClassWithPrivateConstructor.md)
- [ChildClassOfPrivateConstructor](ChildClassOfPrivateConstructor.md)
- [ChildClassOfPrivateConstructor2](ChildClassOfPrivateConstructor2.md)
- [ExampleClass](ExampleClass.md)
- [ExampleClassWithCrossModuleInheritence](ExampleClassWithCrossModuleInheritence.md)

## Interfaces
- [ExampleInterface](ExampleInterface.md)

## Functions

### **ExampleFunction**
\`
ExampleFunction(testArg: string): boolean
\`

#### **Parameters**
- **testArg**: *string*

**Returns** *boolean*
  
Notes:
- This function can't be called in read-only mode.

## Constants

### **ExampleConstant**
\`static read-only ExampleConstant = 25;\`

Type: *number*

## Objects
  
### **ExampleObject**
\`static read-only ExampleObject: ExampleClass;\`

Type: [*ExampleClass*](ExampleClass.md)
  
### **ExampleObjectInModule3**
\`static read-only ExampleObjectInModule3: minecraftexamplemodule3.ExampleClassInModule3V1AndV2;\`

Type: [*@minecraft/example-module-3.ExampleClassInModule3V1AndV2*](../../../priorscriptapi/minecraft/example-module-3-1xx/ExampleClassInModule3V1AndV2.md)

## Peer Dependencies
- [\`@minecraft/example-module-3\`](../../../priorscriptapi/minecraft/example-module-3-1xx/minecraft-example-module-3.md)
"
`;

exports[`Type Linking > Properly generates documentation for types that are linked > typescript/@minecraft/example-module@1.0.0.d.ts 1`] = `
"// Type definitions for Minecraft Bedrock Edition script APIs
// Project: https://docs.microsoft.com/minecraft/creator/
// Definitions by: Jake Shirley <https://github.com/JakeShirley>
//                 Mike Ammerlaan <https://github.com/mammerla>

/* *****************************************************************************
   Copyright (c) Microsoft Corporation.
   ***************************************************************************** */
/**
 * @packageDocumentation
 * This is a description with a ton of links:
 * Example module: {@link @minecraft/example-module}
 * Example module function: {@link ExampleFunction}
 * Example module constant: {@link ExampleConstant}
 * Example module object: {@link ExampleObject}
 * Example class: {@link ExampleClass}
 * Example class property: {@link ExampleClass.ExampleProperty}
 * Example class method: {@link ExampleClass.ExampleMethod}
 * Example interface: {@link ExampleInterface}
 * Example interface property: {@link
 * ExampleInterface.ExampleProperty}
 * Example enum: {@link ExampleEnum}
 * Example enum value: {@link ExampleEnum.ExampleValue}
 * This line has multiple links! {@link
 * @minecraft/example-module} {@link ExampleFunction} {@link
 * ExampleConstant} {@link ExampleObject}
 *
 * Manifest Details
 * \`\`\`json
 * {
 *   "module_name": "@minecraft/example-module",
 *   "version": "1.0.0"
 * }
 * \`\`\`
 *
 */
import * as minecraftexamplemodule3 from '@minecraft/example-module-3';
export enum ExampleEnum {
    ExampleValue = 'foo',
}

export class BaseClassWithPrivateConstructor {
    private constructor();
}

// @ts-ignore Class inheritance allowed for native defined classes
export class ChildClassOfPrivateConstructor extends BaseClassWithPrivateConstructor {
    private constructor();
}

// @ts-ignore Class inheritance allowed for native defined classes
export class ChildClassOfPrivateConstructor2 extends BaseClassWithPrivateConstructor {
    private constructor();
}

export class ExampleClass {
    private constructor();
    /**
     * @remarks
     * This property can't be used in read-only mode.
     *
     */
    ExampleProperty: number;
    /**
     * @remarks
     * This function can't be called in read-only mode.
     *
     */
    ExampleMethod(testArg: string): boolean;
}

export class ExampleClassWithCrossModuleInheritence {
    private constructor();
}

export interface ExampleInterface {
    ExampleProperty: number;
}

/**
 * @remarks
 * This function can't be called in read-only mode.
 *
 */
export function ExampleFunction(testArg: string): boolean;
export const ExampleConstant = 25;
export const ExampleObject: ExampleClass;
export const ExampleObjectInModule3: minecraftexamplemodule3.ExampleClassInModule3V1AndV2;
"
`;

exports[`Type Linking > Properly generates documentation for types that are linked > typescript/@minecraft/example-module@1.1.0.d.ts 1`] = `
"// Type definitions for Minecraft Bedrock Edition script APIs
// Project: https://docs.microsoft.com/minecraft/creator/
// Definitions by: Jake Shirley <https://github.com/JakeShirley>
//                 Mike Ammerlaan <https://github.com/mammerla>

/* *****************************************************************************
   Copyright (c) Microsoft Corporation.
   ***************************************************************************** */
/**
 * @packageDocumentation
 * This is a description with a ton of links:
 * Example module: {@link @minecraft/example-module}
 * Example module function: {@link ExampleFunction}
 * Example module constant: {@link ExampleConstant}
 * Example module object: {@link ExampleObject}
 * Example class: {@link ExampleClass}
 * Example class property: {@link ExampleClass.ExampleProperty}
 * Example class method: {@link ExampleClass.ExampleMethod}
 * Example interface: {@link ExampleInterface}
 * Example interface property: {@link
 * ExampleInterface.ExampleProperty}
 * Example enum: {@link ExampleEnum}
 * Example enum value: {@link ExampleEnum.ExampleValue}
 * This line has multiple links! {@link
 * @minecraft/example-module} {@link ExampleFunction} {@link
 * ExampleConstant} {@link ExampleObject}
 *
 * Manifest Details
 * \`\`\`json
 * {
 *   "module_name": "@minecraft/example-module",
 *   "version": "1.1.0"
 * }
 * \`\`\`
 *
 */
import * as minecraftexamplemodule3 from '@minecraft/example-module-3';
export enum ExampleEnum {
    ExampleValue = 'foo',
}

export class BaseClassWithPrivateConstructor {
    private constructor();
}

// @ts-ignore Class inheritance allowed for native defined classes
export class ChildClassOfPrivateConstructor extends BaseClassWithPrivateConstructor {
    private constructor();
}

// @ts-ignore Class inheritance allowed for native defined classes
export class ChildClassOfPrivateConstructor2 extends BaseClassWithPrivateConstructor {
    private constructor();
}

export class ExampleClass {
    private constructor();
    /**
     * @remarks
     * This property can't be used in read-only mode.
     *
     */
    ExampleProperty: number;
    /**
     * @remarks
     * This function can't be called in read-only mode.
     *
     */
    ExampleMethod(testArg: string): boolean;
}

export class ExampleClassWithCrossModuleInheritence {
    private constructor();
}

export interface ExampleInterface {
    ExampleProperty: number;
}

/**
 * @remarks
 * This function can't be called in read-only mode.
 *
 */
export function ExampleFunction(testArg: string): boolean;
export const ExampleConstant = 25;
export const ExampleObject: ExampleClass;
export const ExampleObjectInModule3: minecraftexamplemodule3.ExampleClassInModule3V1AndV2;
"
`;

exports[`Type Linking > Properly generates documentation for types that are linked > typescript/@minecraft/example-module-2@1.0.0.d.ts 1`] = `
"// Type definitions for Minecraft Bedrock Edition script APIs
// Project: https://docs.microsoft.com/minecraft/creator/
// Definitions by: Jake Shirley <https://github.com/JakeShirley>
//                 Mike Ammerlaan <https://github.com/mammerla>

/* *****************************************************************************
   Copyright (c) Microsoft Corporation.
   ***************************************************************************** */
/**
 * @packageDocumentation
 * This is a description with a ton of links from a dependency
 * module:
 * Example module: {@link minecraftexamplemodule}
 * Example module function: {@link
 * minecraftexamplemodule#ExampleFunction}
 * Example module constant: {@link
 * minecraftexamplemodule#ExampleConstant}
 * Example module object: {@link
 * minecraftexamplemodule#ExampleObject}
 * Example class: {@link minecraftexamplemodule.ExampleClass}
 * Example class property: {@link
 * minecraftexamplemodule.ExampleClass.ExampleProperty}
 * Example class method: {@link
 * minecraftexamplemodule.ExampleClass.ExampleMethod}
 * Example interface: {@link
 * minecraftexamplemodule.ExampleInterface}
 * Example interface property: {@link
 * minecraftexamplemodule.ExampleInterface.ExampleProperty}
 * Example enum: {@link minecraftexamplemodule.ExampleEnum}
 * Example enum value: {@link
 * minecraftexamplemodule.ExampleEnum.ExampleValue}
 *
 * Manifest Details
 * \`\`\`json
 * {
 *   "module_name": "@minecraft/example-module-2",
 *   "version": "1.0.0"
 * }
 * \`\`\`
 *
 */
import * as minecraftexamplemodule from '@minecraft/example-module';
// @ts-ignore Class inheritance allowed for native defined classes
export class ExampleClassFromDifferentModule extends minecraftexamplemodule.ExampleClassWithCrossModuleInheritence {
    private constructor();
}
"
`;

exports[`Type Linking > Properly generates documentation for types that are linked > typescript/@minecraft/example-module-3@1.0.0.d.ts 1`] = `
"// Type definitions for Minecraft Bedrock Edition script APIs
// Project: https://docs.microsoft.com/minecraft/creator/
// Definitions by: Jake Shirley <https://github.com/JakeShirley>
//                 Mike Ammerlaan <https://github.com/mammerla>

/* *****************************************************************************
   Copyright (c) Microsoft Corporation.
   ***************************************************************************** */
/**
 * @packageDocumentation
 *
 * Manifest Details
 * \`\`\`json
 * {
 *   "module_name": "@minecraft/example-module-3",
 *   "version": "1.0.0"
 * }
 * \`\`\`
 *
 */
export class ExampleClassInModule3V1AndV2 {
    private constructor();
}
"
`;

exports[`Type Linking > Properly generates documentation for types that are linked > typescript/@minecraft/example-module-3@2.0.0.d.ts 1`] = `
"// Type definitions for Minecraft Bedrock Edition script APIs
// Project: https://docs.microsoft.com/minecraft/creator/
// Definitions by: Jake Shirley <https://github.com/JakeShirley>
//                 Mike Ammerlaan <https://github.com/mammerla>

/* *****************************************************************************
   Copyright (c) Microsoft Corporation.
   ***************************************************************************** */
/**
 * @packageDocumentation
 *
 * Manifest Details
 * \`\`\`json
 * {
 *   "module_name": "@minecraft/example-module-3",
 *   "version": "2.0.0"
 * }
 * \`\`\`
 *
 */
export class ExampleClassInModule3V1AndV2 {
    private constructor();
}
"
`;

exports[`Type Linking > Properly generates documentation for types that are linked > typescript/@minecraft/example-module-4@1.0.0.d.ts 1`] = `
"// Type definitions for Minecraft Bedrock Edition script APIs
// Project: https://docs.microsoft.com/minecraft/creator/
// Definitions by: Jake Shirley <https://github.com/JakeShirley>
//                 Mike Ammerlaan <https://github.com/mammerla>

/* *****************************************************************************
   Copyright (c) Microsoft Corporation.
   ***************************************************************************** */
/**
 * @packageDocumentation
 *
 * Manifest Details
 * \`\`\`json
 * {
 *   "module_name": "@minecraft/example-module-4",
 *   "version": "1.0.0"
 * }
 * \`\`\`
 *
 */
import * as minecraftexamplemodule3 from '@minecraft/example-module-3';
export enum ExampleEnum {
    ExampleValue = 'foo',
}

export class BaseClassWithPrivateConstructor {
    private constructor();
}

// @ts-ignore Class inheritance allowed for native defined classes
export class ChildClassOfPrivateConstructor extends BaseClassWithPrivateConstructor {
    private constructor();
}

// @ts-ignore Class inheritance allowed for native defined classes
export class ChildClassOfPrivateConstructor2 extends BaseClassWithPrivateConstructor {
    private constructor();
}

export class ExampleClass {
    private constructor();
    /**
     * @remarks
     * This property can't be used in read-only mode.
     *
     */
    ExampleProperty: number;
    /**
     * @remarks
     * This function can't be called in read-only mode.
     *
     */
    ExampleMethod(testArg: string): boolean;
}

export class ExampleClassWithCrossModuleInheritence {
    private constructor();
}

export interface ExampleInterface {
    ExampleProperty: number;
}

/**
 * @remarks
 * This function can't be called in read-only mode.
 *
 */
export function ExampleFunction(testArg: string): boolean;
export const ExampleConstant = 25;
export const ExampleObject: ExampleClass;
export const ExampleObjectInModule3: minecraftexamplemodule3.ExampleClassInModule3V1AndV2;
"
`;
